--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
     <nav>
         <h1>Number guessing game</h1>
     </nav>
+
+    <div class="cover">
     <div class="container">
         <div class="main-game">
             <div class="h1">
                 <h1>Guess your number</h1>
-                <p>Number is between <br> <b>1-10</b></p>
+                <p>Number is between <br> <b>0-9</b></p>
             </div>
             <div class="input">
                 <input type="text" placeholder="Enter your number">
@@ -39,6 +41,7 @@
                 <button class ="result-button">Try again</button>
             </div>
         </div>
+    </div>
         <div class="score">
             <h1>Win: <span class="win">0</span></h1>
             <h1>Lose: <span class="lose">0</span></h1>
